--- a/celebrity-quest.html
+++ b/celebrity-quest.html
@@ -333,16 +333,13 @@
   <script>
     // Game Data
     const triviaQuestions = [
-      { question: "Which pop star's real name is Stefani Joanne Angelina Germanotta?", correct: "Lady Gaga", options: ["Lady Gaga", "Katy Perry", "Rihanna", "Beyoncé"], stage: 1 },
-      { question: "What was the name of the famous 'King of Pop' who performed 'Thriller'?", correct: "Michael Jackson", options: ["Prince", "Michael Jackson", "Elvis Presley", "James Brown"], stage: 1 },
-      { question: "Which actor played Jack Dawson in 'Titanic'?", correct: "Leonardo DiCaprio", options: ["Brad Pitt", "Leonardo DiCaprio", "Tom Cruise", "Johnny Depp"], stage: 1 },
-      { question: "Which British singer was formerly known as 'Posh Spice'?", correct: "Victoria Beckham", options: ["Mel B", "Emma Bunton", "Victoria Beckham", "Mel C"], stage: 2 },
-      { question: "Which rapper's real name is Marshall Bruce Mathers III?", correct: "Eminem", options: ["Jay-Z", "Eminem", "Kanye West", "Snoop Dogg"], stage: 2 },
-      { question: "Who played Hermione Granger in the Harry Potter films?", correct: "Emma Watson", options: ["Emma Stone", "Emma Watson", "Emily Blunt", "Evanna Lynch"], stage: 2 },
-      { question: "Which singer released the album '25' and is known for 'Hello'?", correct: "Adele", options: ["Taylor Swift", "Adele", "Sia", "Sam Smith"], stage: 3 },
-      { question: "Which billionaire entrepreneur founded SpaceX?", correct: "Elon Musk", options: ["Jeff Bezos", "Elon Musk", "Mark Zuckerberg", "Bill Gates"], stage: 3 },
-      { question: "Who directed 'Pulp Fiction' and 'Kill Bill'?", correct: "Quentin Tarantino", options: ["Martin Scorsese", "Quentin Tarantino", "Christopher Nolan", "Steven Spielberg"], stage: 3 }
-    ];
+          { question: "On August 1, 2025, flags in Tallahassee, Florida, flew at half-staff to commemorate his life & legacy:", correct: "Hulk Hogan", options: ["Randy Savage", "Hulk Hogan", "Ric Flair", "The Ultimate Warrior"], stage: 1 },
+          { question: "On March 21st, 2025, this boxing champ left behind 12 children, including 5 sons who share his name:", correct: "George Foreman", options: ["Muhammad Ali", "Mike Tyson", "George Foreman", "Evander Holyfield"], stage: 1 },
+          { question: "In 2025, game shows are to the death in 'The Running Man', written by Stephen King under this pseudonym:", correct: "Richard Bachman", options: ["Donald Westlake", "Richard Bachman", "John Swithen", "Beryl Evans"], stage: 2 },
+          { question: "In April 2025 the Empire State Building was lit up in green to celebrate the 100th anniversary of this novel's publication:", correct: "The Great Gatsby", options: ["Mrs. Dalloway", "An American Tragedy", "The Great Gatsby", "The Trial"], stage: 2 },
+          { question: "In 2025, this country band released 'Life Is A Highway: Refueled Duets':", correct: "Rascal Flatts", options: ["Lady A", "Little Big Town", "Rascal Flatts", "Old Dominion"], stage: 3 },
+          { question: "In 2025 Barbra Streisand sang 'The First Time Ever I Saw Your Face' with this Irishman nearly 50 years her junior:", correct: "Hozier", options: ["Niall Horan", "Bono", "Hozier", "Glen Hansard"], stage: 3 }
+        ];
 
     const stageNumbers = { 1: 8, 2: 3, 3: 1 };
     
