--- a/celebrity-quest.html
+++ b/celebrity-quest.html
@@ -344,7 +344,7 @@
       { question: "In 2025, this country band released 'Life Is A Highway: Refueled Duets':", correct: "Rascal Flatts", options: ["Lady A", "Little Big Town", "Rascal Flatts", "Old Dominion"], stage: 3 },
       { question: "In 2025 Barbra Streisand sang 'The First Time Ever I Saw Your Face' with this Irishman nearly 50 years her junior:", correct: "Hozier", options: ["Niall Horan", "Bono", "Hozier", "Glen Hansard"], stage: 3 },
       { question: "Best Music Video / Visual Album in 2025 went to Kendrick Lamar for this track dissing Drake:", correct: "Not Like Us", options: ["Euphoria", "6:16 in LA", "Not Like Us", "Meet the Grahams"], stage: 3 },
-      { question: "In March 2025 Blake Shelton hosted a 100th anniversary celebration of this, which began as a radio show:", correct: "the Grand Ole Opry", options: ["the Louisiana Hayride", "the Grand Ole Opry", "the WSM Barn Dance", "the National Barn Dance"], stage: 3 }
+      { question: "In March 2025 Blake Shelton hosted a 100th anniversary celebration of this, which began as a radio show:", correct: "the Grand Ole Opry", options: ["the Louisiana Hayride", "the Grand Ole Opry", "Praire Home Companion", "the National Barn Dance"], stage: 3 }
         ];
 
     const stageNumbers = { 1: 8, 2: 3, 3: 1 };
